<resources>
    <string name="app_name">iSanPablo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">San Pablo City Application</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_bpo">BPLO Fill Up</string>
    <string name="hymn">
        Titik ni : Celso Al Carunungan \n
        Tugtugin ni : Antonino Buenaventura \n
        Inawit ni : Oyayi Choir \n \n


        I\n\n

        Lunsod na dakila\n
        Bayan ng Maykapal\n
        Lupang pinagyaman\n
        Ng puri at dangal\n\n

        II\n\n

        Lunsod ng San Pablo\n
        Bayang minamahal,\n
        Buhay naming ay iyo\n
        Magpakailan pa man\n


    </string>
    <string name="history1">

        \t \t The earliest historical record of the City of San Pablo dates
        back to pre-Spanish times when four (4) big barrios bounded by Mt. Banahaw
        and Mt. Makiling composed Sampaloc. \n \n

        \t \t In 1521, Sampaloc was changed to San Pablo De Los Montes, which became
        a parish in 1556 and then a municipality in 1647.  In 1899, a Municipal
        Government was established with Inocente Martinez as Municipal President
        in 1902 when the Civil Government was granted independence from the Province
        of Laguna.  On May 7, 1940, the charter bill sponsored by Congressman Tomas
        Dizon was approved.  The bill became known as the City Charter of San Pablo
        or Commonwealth Act No. 520. The City was inaugurated on March 30, 1941 with Dr.
        Potenciano Malvar as the appointed City Mayor. \n \n

        \t \t Over the years, it has flourished as a 1st class City.
        It is now being governed by Hon. Loreto S. Amante as a
        first term City Mayor until June 30, 2016. \n

    </string>
    <string name="Location1">

       \t \t San Pablo City also known as the City of Seven Lakes is located
        at geographical coordinates 14 4’ north latitude and 121east latitude.
        It is about 87 south-southwest of the City of Manila with Rizal Park as reference point.
        The City is the center of other progressive cities in Southern Luzon as it belongs to a vital economic hub.
        The City at 14 15’ 20” north latitude is bounded by the mountain ranges of Kaisungan and
        Calauan Hills in the south; Mabilog in the northwest; San Cristobal and Banahaw
        Mountains in the east; and Susong-Dalaga, Napayong and Masalukot Hills in the south to the southeast. \n

    </string>
    <string name="home">

        \t \t San Pablo City also known as the City of Seven Lakes is located
        at geographical coordinates 14 4’ north latitude and 121east latitude.
        It is about 87 south-southwest of the City of Manila with Rizal Park as reference point.
        The City is the center of other progressive cities in Southern Luzon as it belongs to a vital economic hub.
        The City at 14 15’ 20” north latitude is bounded by the mountain ranges of Kaisungan and
        Calauan Hills in the south; Mabilog in the northwest; San Cristobal and Banahaw
        Mountains in the east; and Susong-Dalaga, Napayong and Masalukot Hills in the south to the southeast. \n

    </string>
    <string name="Sampalok">
        \t \t Sampalok was a large and prospering village which had its own system of government
        and culture. Barangays already existed and each was headed by a chieftain who
        was also known as  Gatpuno. Foremost among them were Gat Paguil, Gat Sungayan,
        Gat Salakab and Gat Pulintan.  Cultural development was manifested in marriage
        patterns, religion and social groups. \n \n
        \t \t Even crude written symbols of communications
        were used to record simple trades and forms of literature although oral handing of
        customs, beliefs, songs and practices was preferred. The natives had a glimpse of
        the outside world thru Chinese traders who were the first group to be in contact
        with as evidenced by  ceramic pieces  that were unearthed and carbon-dated. \n
    </string>
    <string name="Spaniards">
     \t \t   In search of gold the first Spanish troops under Captain Juan de Salcedo reached
        the upland realm of Sampalok in 1571 and immediately announced governance in
        the name of the king of Spain. Administration of its affairs was turned over to
        the   Augustinian missionaries who succeeded in converting most of the natives
        to Christianity. \n \n
        \t \t Fiesta was introduced as part of religious rituals.  Consequently,
        some barangay villages were renamed after saints as a reason for the festivity.
        Native chieftains were renamed cabesa de barangay and in 1647 Sampalok was renamed
        San Pablo de los Montes in honor of St. Paul the First Hermit and became an independent
        municipality with a gobernadorcillo or capitan as its head. \n \n

        \t \t  Centuries of Spanish colonization of the Philippine Islands had left its indelible
        imprint on the social, economic and political life of the country. In San Pablo de
        los Montes the gridiron plan for its central village or cabecera had been replicated
        from   communities that were founded  under the Spanish empire which conspicuously
        featured  a central plaza. From 1648 to 1898  249 gobernadorcillos  and 94 parish priests
        had been  installed  in San Pablo de los Montes. \n \n

        \t \t   Over the years there was genial and friendly relationship between the natives
        and the religious who wielded the civil authority. Until the flames of revolution against
        Spain that  was ignited by the execution of Dr. Jose P. Rizal who was well known to the
        local citizenry had crept into San Pablo de los Montes and  produced revolutionists
        and local  heroes. \n \n

        \t \t   In the face of impending defeat the Spanish troops left the town
        and the Philippine Flag was raised in the town plaza on June 6, 1898.
        The revolutionists led by General Juan Cailles immediately appointed prominent
        citizens as councilmen and town officials to effect local administration. \n

    </string>
    <string name="american">
      \t \t The subsequent defeat of the Spanish colonizers set the stage for another war – the
        Filipino-American war and the inevitable American occupation and establishment of
        the Philippine Commonwealth. Although Manila was captured by the American troops on
        June 30, 1898 the first American cavalry arrived in San Pablo on January 14, 1900
        after taking Santa Cruz and Calamba earlier and routed the  local freedom fighters. \n \n

        \t \t America’s pacification drive and grant of amnesty to freedom-fighters did much to
        quell animosity and distrust among the local citizenry and on January 24, 1901 U.S.
        military authorities appointed Don Pedro de Gorostiza as municipal president of San
        Pablo.\n \n

     \t \t Civil government in the Philippines was inaugurated on July 4, 1901.
        It was ushered in locally by the elite of San Pablo  which was composed of the
        influential, wealthy and closely related families  who easily dominated the fledgling
        electoral process. \n \n

      \t \t Don Marcos Paulino was the first elective municipal president of San Pablo (1902-1904).
        The other municipal presidents who succeeded him are as follows: \n \n

        1905-1907   -   Don Melecio Fule \n
        1908-1910   -   Don Cornelio Alcantara \n
        1911-1913   -   Don Simeon Gesmundo \n
        1914-1916   -   Don Marcial Alimario \n
        1916-1918   -   Don Feliciano Exconde \n
        1919-1921   -   Don Potenciano Cabrera \n
        1922-1924   -   Don Isidoro Alvaran \n
        1925-1927   -   Don Zacarias Sahagun \n
        1928-1931   -   Don Crispin Calabia \n
        1931-1934   -   Don Gaudencio Aquino \n
        1935-1938   -   Don Inocencio Barleta \n
        1938-1940   -   Don Cristeto Brion \n \n

       \t \t On May 7, 1940, San Pablo became a city thru enactment and approval of Commonwealth Act No.
        520 which was sponsored by Assemblyman Tomas Dizon. Dr. Potenciano Malvar became the first
        appointive City Mayor. \n

    </string>
    <string name="japanese">

        \t \t In the morning of December 25, 1941 Japanese fighter planes dropped bombs in the city
        and strafed people and edifices. They left behind a harrowing scene of ruins and death.
        On December 30, 1941 General Susuma  Morioka arrived and took over San Pablo in the name
        of the invading Japanese Imperial Forces. \n \n

       \t \t World War II brought extensive damage to the city in terms of lives lost and property
        destroyed. It brought out the worst and the best in men – from the dreaded notoriety
        of the local kempetai and makapili collaborators  to the admirable heroism of the local
        guerillas and freedom fighters one of whom was Cipriano B. Colago who became the first elected
        City Mayor of San Pablo. Japanese occupation ended when the American troops marched into
        the city on April 4, 1945. \n

    </string>
   <string name="marcos">
      \t \t On September 21, 1972 President Ferdinand E. Marcos issued Proclamation No. 1081 which placed
       the entire Philippine archipelago under Martial Law.  Among others, it paved the way for the
       issuance of Presidential Decree No. 86 dated December 31, 1972; Presidential Decree No. 86-A
       dated January 5, 1973 and Presidential Decree No. 86-B dated January 7, 1973.  All these decrees
       were contributory to the creation of Citizen Assemblies or Barangays. Under  these decrees 80
       barangays were created in the city. \n \n

       \t \t  On February 25, 1986 the so-called EDSA Revolution or People Power Revolution broke
       out following withdrawal of support by Defense Minister Enrile and Philippine Constabulary
       Chief Fidel V. Ramos to the martial law government. President Marcos fled the country and went
       to Hawaii were he died on September 28,1989.  \n \n

       \t \t  A Revolutionary Government was established by President Corazon C. Aquino who was catapulted to
       power by the EDSA revolution and local government executives all over the country were either
       booted out of office or retained.  In San Pablo City, Mayor Cesar P. Dizon was replaced by
       long-time political rival, former City Mayor Zacarias A. Ticzon as OIC Mayor. \n \n

       \t \t  Upon filing of his certificate of candidacy Ticzon was replaced by OIC Jose de Roma who was later on replaced
       by OIC Ruben Adarlo of the MILG.  Upon ratification of the Philippine Constitution of 1986
       normalcy in governance returned and so did the electoral process. \n

   </string>
    <string name="Reps"> Republic of the Philippines \n

    </string>
    <string name="Rep">
        All content is in the public \n
        domain unless otherwise stated
    </string>
    <string name="tab_govphil">The Integrated Government Philippines (iGovPhil) is a joint program \n of the
        Department of Information and Communications Technology \n (DICT) and the
        Advanced Science and Technology Institute of the \n Department of Science and Technology (DOST-ASTI)\n
    </string>
</resources>